--- a/src/app/authentication/login/login.component.scss
+++ b/src/app/authentication/login/login.component.scss
@@ -4,7 +4,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    // background-color: #ebecf0;
     p {
         color: #808080;
         font-size: 14px;
@@ -42,7 +41,7 @@
     }
     
     ion-button {
-        margin-top: 20px;
+        margin-top: 10px;
     }
 
     IonItem {
@@ -60,5 +59,15 @@
 
     .button-text {
         color: #808080;
+    }
+
+    .show-password-box {
+        margin: 20px 0 10px;
+        padding: 0;
+        span {
+            font-size: 14px;
+            font-weight: 400;
+            margin-left: 8px;
+        }
     }
 }
