--- a/src/app/authentication/registration/registration.component.html
+++ b/src/app/authentication/registration/registration.component.html
@@ -18,14 +18,18 @@
       </ng-container>
     </IonItem>
     <IonItem>
-      <ion-input [ngClass]="{'input-base': true, 'input-error': isValidField('password')}" placeholder="Enter Your Password" formControlName="password"></ion-input>
+      <ion-input [ngClass]="{'input-base': true, 'input-error': isValidField('password')}" placeholder="Enter Your Password" formControlName="password" [type]="!isShowPassword ? 'password' : null"></ion-input>
       <ng-container *ngFor="let validation of validation_messages.password">
         <div class="error-message" *ngIf="registerForm.get('password').hasError(validation.type) && (registerForm.get('password').dirty || registerForm.get('password').touched)">
           {{ validation.message }}
         </div>
       </ng-container>
+      <div class="show-password-box">
+        <ion-checkbox color="light" (ionChange)="onBoxPasswordChange($event)"></ion-checkbox>
+        <span>Show password</span>
+      </div>
     </IonItem>
     <ion-button color="light" (click)="registration()"><span class="button-text">Register</span></ion-button>
-    <div><p>Already have an account? <span [routerLink]="['/auth/login']" >Go to login</span></p></div>
+    <div><p>Already have an account? <span [routerLink]="['/auth/login']">Go to log in</span></p></div>
   </div>
 </div>
