--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,8 +2,14 @@
   <div class="store-name">
     <h2 [routerLink]="['/home/products']" >store</h2>
   </div>
-  <div  >
-    <ion-icon [routerLink]="['/auth/login']" name="log-in-outline"></ion-icon>
-    <!-- <ion-icon name="log-out-outline"></ion-icon> -->
+  <div>
+    
+    <div class="user-icon" *ngIf="isLogin && !isAuthPage" [routerLink]="['/home/profile']">
+      <span>{{userData ? userData.name.charAt(0) : ''}}</span>
+    </div>
+    <ion-icon *ngIf="isLogin && !isAuthPage" name="basket-outline" [routerLink]="['/home/card']"></ion-icon>
+    <ion-icon *ngIf="!isLogin && !isAuthPage" [routerLink]="['/auth/login']" name="log-in-outline"></ion-icon>
+    <ion-icon *ngIf="isLogin && !isAuthPage" name="log-out-outline" (click)='logOut()'></ion-icon>
+    
   </div>
 </ion-header>
