--- a/src/app/home/products/products.component.html
+++ b/src/app/home/products/products.component.html
@@ -4,8 +4,12 @@
     <ion-card *ngFor="let item of products">
       <ion-card-header>
         <ion-img [src]="item.bookImage"></ion-img>
-        <ion-card-title>{{item.author}}</ion-card-title>
-        <ion-card-subtitle>{{item.title}}</ion-card-subtitle>
+        <ion-card-content class="wrap-product-info">
+          <ion-card-title>{{item.author}}</ion-card-title>
+          <ion-card-subtitle>{{item.title}}</ion-card-subtitle>
+          <ion-card-subtitle>Price: {{item.price}}</ion-card-subtitle>
+          <ion-button id={{item._id}} color="light" (click)="addToCard($event)"><span class="add-button-text">Add to card</span></ion-button>
+        </ion-card-content>
       </ion-card-header>
       <ion-card-content>
         {{item.description}}
