--- a/src/app/home/products/products.component.scss
+++ b/src/app/home/products/products.component.scss
@@ -4,13 +4,41 @@
     flex-direction: column;
     align-items: center;
     background-color: #ebecf0;
+
     ion-card {
-      max-width: 600px;
+      max-width: 450px;
       display: flex;
       flex-direction: column;
     }
+
+    ion-card-header {
+      display: flex;
+    }
+
     ion-img {
-      max-width: 300px;
-      height: 400px;
+      max-width: 150px;
+      height: 220px;
+    }
+
+    ion-card-title, ion-card-subtitle, ion-card-content {
+      color: #808080;
+      font-weight: 700;
+    }
+
+    ion-card-content {
+      font-weight: 600;
+    }
+
+    .wrap-product-info {
+      padding-top: 25px;
+    }
+
+    ion-button {
+      margin-top: 15px;
+    }
+
+    .add-button-text {
+      color: #808080;
+      font-size: 12px;
     }
   }
